--- a/html/table.html
+++ b/html/table.html
@@ -6,8 +6,34 @@
     <link rel="stylesheet" href="table.css"/>
 </head>
 <body>
+<div id="content_interior">
 
+    <div class="details">
+        <h2><a title="Bodrag Utilities" href="http://www.bodrag.com/prod/bodrag_utilities_2009/">Bodrag
+            Utilities</a></h2>
 
+        <div class="clear"></div>
+        <div class="product_detailed_left">
+            Version:<br>
+            Release date:<br>
+        </div>
+        <div class="product_detailed_right">
+            1.10<br>
+            November 30, 2010<br>
+        </div>
+        <div class="clear"></div>
+        <div class="file">
+            <img title="Manual" alt="Manual" src="http://www.bodrag.com/assets/images/ext_pdf.jpg">
+            <a title="Manual" class="ext_pdf" href="/download_file.php?file=bodragutilitiesmanual.pdf">Manual</a><span class="ext_pdf">&nbsp;(5,043 Kb)</span>
+        </div>
+        <div class="clear"></div>
+        <div class="more">
+            <a title="MORE DOWNLOADS FOR BODRAG UTILITIES" href="http://www.bodrag.com/prod/bodrag_utilities_2009/downloads/">MORE
+                DOWNLOADS FOR BODRAG UTILITIES</a>
+        </div>
+    </div>
+
+</div>
 
 </body>
 </html>
