--- a/html/table.html
+++ b/html/table.html
@@ -3,37 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="table.css"/>
+    <!--<link rel="stylesheet" href="table.css"/>-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<div id="content_interior">
 
-    <div class="details">
-        <h2><a title="Bodrag Utilities" href="http://www.bodrag.com/prod/bodrag_utilities_2009/">Bodrag
-            Utilities</a></h2>
+<!--<div class="details">-->
+<!--<div class="column_left" style="padding-top: 5px;float: left;font-weight: bold;padding-bottom: 10px;line-height: 18px;">-->
+<!--Version:<br>-->
+<!--Release date:<br>-->
+<!--</div>-->
+<!--<div class="columnn_right" style="padding-top: 5px;padding-left: 15px;float: left;line-height: 18px;">-->
+<!--1.10<br>-->
+<!--November 30, 2010<br>-->
+<!--</div>-->
+<!--</br>-->
+<!--</br>-->
+<!--</div>-->
 
-        <div class="clear"></div>
-        <div class="product_detailed_left">
-            Version:<br>
-            Release date:<br>
-        </div>
-        <div class="product_detailed_right">
-            1.10<br>
-            November 30, 2010<br>
-        </div>
-        <div class="clear"></div>
-        <div class="file">
-            <img title="Manual" alt="Manual" src="http://www.bodrag.com/assets/images/ext_pdf.jpg">
-            <a title="Manual" class="ext_pdf" href="/download_file.php?file=bodragutilitiesmanual.pdf">Manual</a><span class="ext_pdf">&nbsp;(5,043 Kb)</span>
-        </div>
-        <div class="clear"></div>
-        <div class="more">
-            <a title="MORE DOWNLOADS FOR BODRAG UTILITIES" href="http://www.bodrag.com/prod/bodrag_utilities_2009/downloads/">MORE
-                DOWNLOADS FOR BODRAG UTILITIES</a>
-        </div>
+<!--<div class="details">-->
+<!--<div class="column_left" style="padding-top: 5px;float: left;font-weight: bold;padding-bottom: 10px;line-height: 18px;">-->
+<!--Version:<br>-->
+<!--Release date:<br>-->
+<!--</div>-->
+<!--<div class="columnn_right" style="padding-top: 5px;padding-left: 15px;float: left;line-height: 18px;">-->
+<!--1.10<br>-->
+<!--November 30, 2010<br>-->
+<!--</div>-->
+<!--</div>-->
+
+<div class="row">
+    <div class="col-md-2 " style="font-weight: bold;line-height: 18px;">
+        Version:
     </div>
-
+    <div class="col-md-4" style="line-height: 18px;">
+        1.10
+    </div>
 </div>
+
+<div class="row">
+    <div class="col-md-2 " style="font-weight: bold;line-height: 18px;">
+        Release date:
+    </div>
+    <div class="col-md-4" style="line-height: 18px;">
+        November 30, 2010
+    </div>
+</div>
+
+<p>wanghao</p>
 
 </body>
 </html>
