--- a/wordpress/Pages/home.html
+++ b/wordpress/Pages/home.html
@@ -1,8 +1,8 @@
-[custom_element element="div" css_class="custom_posts" inner_wrapper="false"]
+<!--[custom_element element="div" css_class="custom_posts" inner_wrapper="false"]-->
 
-[custom_posts_grid type="post" columns="2" rows="2" order_by="date" order="DESC" thumb_width="570" thumb_height="277" meta="yes" excerpt_count="0" link="no"]
+<!--[custom_posts_grid type="post" columns="2" rows="2" order_by="date" order="DESC" thumb_width="570" thumb_height="277" meta="yes" excerpt_count="0" link="no"]-->
 
-[/custom_element]
+<!--[/custom_element]-->
 
 [custom_element element="div" css_class="featured_products" inner_wrapper="false"]
 <h2>featured products</h2>
