--- a/html/table.html
+++ b/html/table.html
@@ -16,50 +16,145 @@
 
 </head>
 <body>
-
-<!--<div class="details">-->
-<!--<div class="column_left" style="padding-top: 5px;float: left;font-weight: bold;padding-bottom: 10px;line-height: 18px;">-->
-<!--Version:<br>-->
-<!--Release date:<br>-->
-<!--</div>-->
-<!--<div class="columnn_right" style="padding-top: 5px;padding-left: 15px;float: left;line-height: 18px;">-->
-<!--1.10<br>-->
-<!--November 30, 2010<br>-->
-<!--</div>-->
-<!--</br>-->
-<!--</br>-->
-<!--</div>-->
-
-<!--<div class="details">-->
-<!--<div class="column_left" style="padding-top: 5px;float: left;font-weight: bold;padding-bottom: 10px;line-height: 18px;">-->
-<!--Version:<br>-->
-<!--Release date:<br>-->
-<!--</div>-->
-<!--<div class="columnn_right" style="padding-top: 5px;padding-left: 15px;float: left;line-height: 18px;">-->
-<!--1.10<br>-->
-<!--November 30, 2010<br>-->
-<!--</div>-->
-<!--</div>-->
-
-<div class="row">
-    <div class="col-md-2 " style="font-weight: bold;line-height: 18px;">
-        Version:
-    </div>
-    <div class="col-md-4" style="line-height: 18px;">
-        1.10
+<div class="container" id="id_portfolio">
+    <div class="row">
+        <div class="dividerHeading">
+            <h4><span>Recent projects</span></h4>
+        </div>
+        <div class="carousel slide" id="carousel-example-generic" style="min-height: 400px;" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="9"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="10"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="../upload/Products/Bodrag%20PDF%20Converter/th1-1-Box_05_Converter.png">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Game for 2014 World Cup</h2>
+                        <h3>iOS / Android</h3>
+                        <p>Flappy Football is a Flappy bird clone with football players, ball and pitch created for Mundial 2014 in Brasil. Ball is pulled down by gravitation and gains some vertical up speed when tapped. You should try to pass as many players as you can to gain scores but in the meantime you should stay away from bounds because they lower your scores!</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="../upload/Products/Bodrag%20PDF%20Converter/th1-1-Box_05_Converter.png">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Wireless Sound Controller Using MIDI Signals</h2>
+                        <h3>iOS</h3>
+                        <p>iTweak  is an iPad app developed in cooperation with Nonagram Sound Studio mainly for recording studio purposes. It enables a sound engineer to control set of different parameters of a recording software remotely with a feeling of analog device. Instead of using a mouse and keyboard shortcuts, whose performance is limited it gives a hands-on experience without a need of buying very expensive hardware wired USB controller. Bright and visible coloring makes it comfortable to use in low light situations, such as studio mixing session, live concert or DJ performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="../upload/Products/Bodrag%20PDF%20Converter/th1-1-Box_05_Converter.png">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Optimized Survey System</h2>
+                        <h3>Backend / Web</h3>
+                        <p>Kilimanjaro Survey System for examining suicidal tendencies created as single-page app using AngularJS and node.js technologies. System responsiveness defines a new way of using surveys - therefore it can be easily used on computers, tablets and mobile devices.
+                        </p>
+                    </div>
+                </div>
+                <div class="item active left">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Loyali_mobile_loyal_app_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Loyalty System</h2>
+                        <h3>iOS / Backend / Web</h3>
+                        <p>Loyali is a mobile loyalty program.&nbsp;Loyali&nbsp;includes mobile app for iOS and web dashboard that enables shop owners to send PUSH notifications based on target &amp; demographics. The whole system will be integrated with Estiomte Beacons API - small, wireless sensors that use Bluetooth low energy (BLE) to detect the location of nearby smartphones and communicate (in development).
+                        </p>
+                    </div>
+                </div>
+                <div class="item next left">
+                    <div class="col-md-6">
+                        <img class="img-responsive" style="display: block !important;" src="images/portfolio/Sigmapoint_mobile_ad_SDK_480_1.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Ads SDK (compatible with Mraid v2)</h2>
+                        <h3>iOS / Android</h3>
+                        <p>SDK for iOS and Android that allows developer to place advertisements in his app (like Google AdMob or Apple iAd). It uses our partner’s custom Ad Server and is compatible with Mraid v2 specification. Besides the ad displaying framework itself we also created bridge for WebView that enables two-way interaction between our mraid.js library and native code for both iOS and Android.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Nearbox_Android_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Hyperlocal Messaging System</h2>
+                        <h3>iOS / Android / Backend / Web</h3>
+                        <p>Nearbox is a hyperlocal communication app for iPhone, Android and Web that lets people communicate through places. You choose a place, send there a message and get the response from other people who subscribe this place. It’s like Twitter but instead of people you follow the places.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Partybeat_WindowsPhone_Android_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Music Mixer</h2>
+                        <h3>iOS / Android / Windows Phone 8</h3>
+                        <p>Partybeat is an app for iPhone, Android &amp; Windows Phone lets you become a professional DJ in a second. It allows you to select a sound track from one of three sections and mixes all of them in real time. To create better climate it blinks your flashlight alongside music beat.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Saeco_Philips_Android_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>App for Saeco Coffee Machine Owners</h2>
+                        <h3>iOS / Android</h3>
+                        <p>My Saeco is a mobile app for Android &amp; iPhone developed in cooperation with Red Mobile for Philips Polska. My Saeco is a dedicated app for Saeco coffee machines owners that provides instructions, recipies, clock alarm and many interesting facts &amp; videos about making coffee.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Skoda_Android_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Photo Creator for Samsung Galaxy Camera</h2>
+                        <h3>Android</h3>
+                        <p>Skoda Photo Center is a special app for Samsung Galaxy Camera ek-gc100 that allows you to become a hockey star in just one moment! We used various Android libraries, developer skills and experience gained from another projects to create fully working application so user can manipulate his own photo on many levels, merge it with previously chosen "hockey player background image" and finally send it via email. We also used REST API to provide backup for all photos on a server.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_Sleepcake_Android_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Social Clock Alarm</h2>
+                        <h3>iOS / Android</h3>
+                        <p>Sleepcake is a new social clock alarm app that aims to redefine the way people wake up by giving them a chance to do it together. Every time the alarm goes off, the app displays number of people waking up with you at the same time and lets you interact with them through the simple feed called “Wake Up Chat”.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="col-md-6">
+                        <img class="img-responsive" src="images/portfolio/Sigmapoint_ToCoMoje_mobile_receipt_scanner_Android_iOS_app-480.jpg">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Mobile Receipt Scanner</h2>
+                        <h3>iOS / Android / Backend / Web</h3>
+                        <p>ToCoMoje is a mobile receipt scaner that lets you scan and keep your receipts in case of return of damaged or faulty goods. Our team was responsible for design &amp; development both apps and integration with Stackmob.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
-<div class="row">
-    <div class="col-md-2 " style="font-weight: bold;line-height: 18px;">
-        Release date:
-    </div>
-    <div class="col-md-4" style="line-height: 18px;">
-        November 30, 2010
-    </div>
-</div>
-
-<p>wanghao</p>
-
 </body>
 </html>
