--- a/Products/pages-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/Wipe Expert 3.html
@@ -13,10 +13,12 @@
 
 [extra_wrap]
 <h3>Wipe Expert 3</h3>
-<strong>WIPE EXPERT</strong>is an award winning privacy software &amp; internet eraser tool that helps remove all traces of online and offline activity. Also with the help of our product you can free space from your hard drive by removing the unnecessary files.
+<strong>WIPE EXPERT</strong> is an award winning privacy software &amp; internet eraser tool that helps remove all traces of online and offline activity. Also with the help of our product you can free space from your hard drive by removing the unnecessary files.
 [/extra_wrap]
 [/custom_element]
 
 [/span12]
+
+&nbsp;
 
 [/row]
