--- a/Products/pages-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/Wipe Expert 3.html
@@ -62,3 +62,61 @@ The award-winning Wipe Expert 3 is the only privacy protection tool that you'll 
 &nbsp;
 
 Download and begin using Wipe Expert 3 today so that you don't become another victim of cybercrime!
+
+[span12]
+<h2>Features</h2>
+[hr]
+[/span12]
+
+<strong>Special methods for secure erase:</strong>
+<ul>
+    <li>Character "0"</li>
+    <li>Random data</li>
+    <li>Random data + Character "0"</li>
+    <li>AFSSI-5020 method</li>
+    <li>NAVSO P-5239-26 (MFM) method</li>
+    <li>NAVSO P-5239-26 (RLL) method</li>
+    <li>US Army AR380-19 method</li>
+    <li>DoD 5220.22-M (E) method</li>
+    <li>DoD 5220.22-M (ECE) method</li>
+    <li>VSITR method</li>
+    <li>B. Schneier method</li>
+    <li>Peter Gutmann method</li>
+    <li>DoD 5220.22-M (E) + Peter Gutmann method</li>
+</ul>
+<strong>Advanced features:</strong>
+<ul>
+    <li>scramble filename</li>
+    <li>reset file size to zero</li>
+    <li>automatic cleaning (when Windows shutdown or start, at specified time, at specified time interval)</li>
+    <li>plug-in support</li>
+    <li>online auto update</li>
+    <li>panic mode</li>
+</ul>
+<strong>Internet cleaning:</strong>
+<ul>
+    <li>support Internet Explorer, Firefox and Chrome</li>
+    <li>clean cache &amp; cookies</li>
+    <li>clean history and last visited pages</li>
+    <li>AutoComplete forms</li>
+    <li>favorites &amp; bookmarks</li>
+</ul>
+<strong>System cleaning:</strong>
+<ul>
+    <li>selected files &amp; folders</li>
+    <li>search and clean junk files</li>
+    <li>clean Recycle Bin</li>
+    <li>clean free space</li>
+    <li>... and more</li>
+</ul>
+<strong>Panic mode:</strong>
+<ul>
+    <li>invisible button to activate panic mode</li>
+    <li>hide windows</li>
+    <li>close windows</li>
+    <li>mute volume</li>
+    <li>hide desktop &amp; taskbar</li>
+    <li>disable CTRL+ALT+DELETE shortcut</li>
+    <li>clean selected items</li>
+    <li>customizable actions</li>
+</ul>
