--- a/Products/pages-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/Wipe Expert 3.html
@@ -27,25 +27,15 @@
 
 <strong>Why is File Shredding So Important?</strong>
 
-&nbsp;
-
 You wouldn't throw away your private documents into the trash without shredding them first - would you? Putting your bank statements, credit cards and health records into a trash bag un-shredded is just not a safe practice. Anyone could obtain your private information simply by going through your trash. The same is exactly true for data files on your computer, and data thieves know it!
 
-&nbsp;
-
 With the right knowhow intruders can retrieve browsing history, restore temporary files, view bank records or more even after you have deleted them! It's true! Personal information you thought was gone is actually still there on your hard drive, hidden-but-recoverable with the right software. That's why you need Wipe Expert 3 - the award winning data shredding program that will protect your online privacy, and keep your personal records unobtainable by even the most savvy data thieves.
-
-&nbsp;
 
 <strong>Protect Your Online Privacy</strong>
 
 Additionally all modern Internet browsers download and store information about your online habits in temporary files - called 'Internet Cache'. Browsers will also save your browsing history to know where you've been and will track other sensitive information.
 
-&nbsp;
-
 The award-winning Wipe Expert 3 is the only privacy protection tool that you'll ever need to ensure complete and permanent removal of private files. In fact we made it powerful enough to meet the U.S. Department of Defense.
-
-&nbsp;
 
 <strong>Feature Packed!</strong>
 
@@ -59,14 +49,18 @@ The award-winning Wipe Expert 3 is the only privacy protection tool that you'll 
 - Support for Microsoft Office, Windows Messenger, and Skype
 - Permanently removes some or all data from your computer's hard drive
 
+Download and begin using Wipe Expert 3 today so that you don't become another victim of cybercrime!
+
 &nbsp;
 
-Download and begin using Wipe Expert 3 today so that you don't become another victim of cybercrime!
+[row]
 
 [span12]
 <h2>Features</h2>
 [hr]
 [/span12]
+
+[/row]
 
 <strong>Special methods for secure erase:</strong>
 <ul>
