--- a/Products/pages-downloads/Bodrag Utilities.html
+++ b/Products/pages-downloads/Bodrag Utilities.html
@@ -34,3 +34,13 @@ It enhances system speed by disabling unneeded features, compacting and defragme
     <li>Detailed descriptions on each step of optimization process</li>
 </ul>
 [/row]
+
+
+[row]
+
+[span12]
+<h2>Features</h2>
+[hr]
+[/span12]
+
+[/row]
