--- a/Products/pages-downloads/RAM Booster Expert.html
+++ b/Products/pages-downloads/RAM Booster Expert.html
@@ -22,3 +22,12 @@ Use our memory cleaner, RAM Booster Expert, and boost your computer free memory 
 [/custom_element]
 
 [/span12]
+
+[row]
+
+[span12]
+<h2>Features</h2>
+[hr]
+[/span12]
+
+[/row]
