--- a/Products/pages-downloads/RAM Booster Expert.html
+++ b/Products/pages-downloads/RAM Booster Expert.html
@@ -22,6 +22,18 @@ Use our memory cleaner, RAM Booster Expert, and boost your computer free memory 
 [/custom_element]
 
 [/span12]
+<h3>How does RAM BOOSTER EXPERT work ?</h3>
+Many software products, including Windows, load a huge amount of libraries in memory, but not all of them are necessary. Our memory optimizer product will find these memory blocks and will unload them to the page file. When some of this data becomes necessary it is loaded back to RAM memory again.
+Sometimes when applications close, not the entire allocated memory is released. RAM Booster Expert finds these memory leaks and flushes them, increasing size of free memory. Also RAM Booster Expert make a memory de-fragmentation that reduce the needed time for CPU to find the information.
+Immediately after optimization process you can get your computer running a little bit slower, but this only for a couple of seconds.
+<h3>Why is RAM BOOSTER EXPERT the best product of this kind?</h3>
+Right from the start, you will be very pleased with the friendly interface of our software.
+Another important feature of the RAM Booster Expert software is the schedule function that helps you automatically run memory optimization processes.
+Also you can manage running processes and startup entries using Process Manager and Startup Manager.
+
+Another feature, very useful for users, is the multi-language interface.
+
+&nbsp;
 
 [row]
 
@@ -31,3 +43,40 @@ Use our memory cleaner, RAM Booster Expert, and boost your computer free memory 
 [/span12]
 
 [/row]
+
+<strong>Multiple optimization methods:</strong>
+<ul>
+    <li>very fast optimization</li>
+    <li>fast optimization</li>
+    <li>medium optimization</li>
+    <li>full optimization</li>
+    <li>custom optimization</li>
+</ul>
+<strong>Multiple real-time monitors:</strong>
+<ul>
+    <li>CPU level</li>
+    <li>free physical memory</li>
+    <li>used physical memory</li>
+    <li>free page file memory</li>
+    <li>used page file memory</li>
+    <li>clipboard contents</li>
+</ul>
+<strong>Increase the amount of free memory available.</strong>
+
+<strong>Recovers memory from Windows and running applications.</strong>
+
+<strong>De-fragment physical memory.</strong>
+
+<strong>Fast, threaded memory freeing with stop option.</strong>
+
+<strong>Powerful process manager.</strong>
+
+<strong>Powerful startup manager.</strong>
+
+<strong>Scheduled optimization function that enables you from starting the optimization process at anytime without you being physically there.</strong>
+
+<strong>System tray free memory indicator.</strong>
+
+<strong>Multilanguage support.</strong>
+
+<strong>Easy to use and attractive interface.</strong>
