--- a/Products/pages-downloads/download.html
+++ b/Products/pages-downloads/download.html
@@ -22,11 +22,10 @@
 <br>
 
 <p style="margin-bottom: 20px">It is a privacy software &amp; internet eraser tool that helps remove
-    all traces of online and
-    offline activity. Also with the help of our product you can free space from your hard drive by
-    removing the unnecessary files. Our product uses 13 special data patterns to erase files and
-    make them completely unrecoverable. Also you can erase traces from various applications like:
-    Microsoft Office, WordPad, Paint, Skype and more.</p>
+    all traces of online and offline activity. Also with the help of our product you can free space
+    from your hard drive by removing the unnecessary files. Our product uses 13 special data
+    patterns to erase files and make them completely unrecoverable. Also you can erase traces from
+    various applications like: Microsoft Office, WordPad, Paint, Skype and more.</p>
 [clear]
 <br>
 
