--- a/Products/pages-downloads/download.html
+++ b/Products/pages-downloads/download.html
@@ -19,18 +19,18 @@
 
 <h2><a title="Wipe Expert 3" href="http://www.bodrag.com/prod/wipe_expert/">Wipe Expert 3</a></h2>
 
-
+<div>
 <p style="margin-bottom: 20px">It is a privacy software &amp; internet eraser tool that helps remove
     all traces of online and offline activity. Also with the help of our product you can free space
     from your hard drive by removing the unnecessary files. Our product uses 13 special data
     patterns to erase files and make them completely unrecoverable. Also you can erase traces from
     various applications like: Microsoft Office, WordPad, Paint, Skype and more.</p>
-
-<div>
-    <a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">BUY</a>
-    <a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">details</a>
-    <a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">free download</a>
 </div>
+
+<a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">BUY</a>
+<a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">details</a>
+<a class="btn btn-primary" href="http://wanghaobt720.byethost32.com/Bodrag/uncategorized/mauris-posuere/">free
+    download</a>
 
 [/span7]
 [/row]
