--- a/Products/pages-downloads/template-testimonial.html
+++ b/Products/pages-downloads/template-testimonial.html
@@ -76,7 +76,7 @@
                    onMouseOut="this.style.textDecoration='none'"
                    href="http://localhost/wordpress/downloads/bodrag-pdf-converter/">Bodrag PDF Converter</a>
             </h2>
-            <p>It is an award winning memory optimization tool. Using it you will be able to increase the computer speed and will make your Windows to run faster and stable. It also display many useful information's about system memory (free, used and total physical memory, free, used and total page file, clipboard content size and CPU usage).</p>
+            <p>It enable you to export the text, images and other contents from PDF to Word documents, so you can reuse and change your PDF content. It will preserve text, layout and bitmap images in the generated Word document. You are just 3 clicks away to having your PDF going Word.</p>
             <div class="clear"></div>
             <div style="margin-top: 20px">
                 [button text="BUY" link="http://localhost/wordpress/product/bodrag-pdf-converter" style="default" size="normal" target="_self" display="inline" icon="no"]
