--- a/Products/Support/contact.html
+++ b/Products/Support/contact.html
@@ -1,13 +1,51 @@
 <div class="row-fluid">
     <p class="span4 field">[text* your-first-name watermark "First Name:"] </p>
+
     <p class="span4 field">[text* your-family-name watermark "Family Name:"] </p>
+
     <p class="span4 field">[email* your-email watermark "E-mail:"] </p>
+
     <p class="span4 field">[text* your-company-name watermark "Company Name:"] </p>
+
     <p class="span4 field">[text* your-city watermark "City:"] </p>
+
     <p class="span4 field">[text* your-address watermark "Address:"] </p>
+
     <p class="span4 field">[text your-phone watermark "Phone:"] </p>
-    <p>Country:<br />
-        [select menu-773 "Afghanistan" "Albania" "Algeria" "Andorra" "Angola" "Antigua & Barbuda" "Argentina" "Armenia" "Australia" "Austria" "Azerbaijan" "Bahamas" "Bahrain" "Bangladesh" "Barbados" "Belarus" "Belgium" "Belize" "Benin" "Bhutan" "Bolivia" "Bosnia & Herzegovina" "Botswana" "Brazil" "Brunei" "Bulgaria" "Burkina Faso" "Burundi" "Cambodia" "Cameroon" "Canada" "Cape Verde" "Central African Republic" "Chad" "Chile" "China" "Colombia" "Comoros" "Congo" "Congo Democratic Republic" "Costa Rica" "Cote d'Ivoire" "Croatia" "Cuba" "Cyprus" "Czech Republic" "Denmark" "Djibouti" "Dominica" "Dominican Republic" "Ecuador" "East Timor" "Egypt" "El Salvador" "Equatorial Guinea" "Eritrea" "Estonia" "Ethiopia" "Fiji" "Finland" "France" "Gabon" "Gambia" "Georgia" "Germany" "Ghana" "Greece" "Grenada" "Guatemala" "Guinea" "Guinea-Bissau" "Guyana" "Haiti" "Honduras" "Hungary" "Iceland" "India" "Indonesia" "Iran" "Iraq" "Ireland" "Israel" "Italy" "Jamaica" "Japan" "Jordan" "Kazakhstan" "Kenya" "Kiribati" "Korea North" "Korea South" "Kosovo" "Kuwait" "Kyrgyzstan" "Laos" "Latvia" "Lebanon" "Lesotho" "Liberia" "Libya" "Liechtenstein" "Lithuania" "Luxembourg" "Macedonia" "Madagascar" "Malawi" "Malaysia" "Maldives" "Mali" "Malta" "Marshall Islands" "Mauritania" "Mauritius" "Mexico" "Micronesia" "Moldova" "Monaco" "Mongolia" "Montenegro" "Morocco" "Mozambique" "Myanmar (Burma)" "Namibia" "Nauru" "Nepal" "The Netherlands" "New Zealand" "Nicaragua" "Niger" "Nigeria" "Norway" "Oman" "Pakistan" "Palau" "Palestinian State*" "Panama" "Papua New Guinea" "Paraguay" "Peru" "The Philippines" "Poland" "Portugal" "Qatar" "Romania" "Russia" "Rwanda" "St. Kitts & Nevis" "St. Lucia" "St. Vincent & The Grenadines" "Samoa" "San Marino" "Sao Tome & Principe" "Saudi Arabia" "Senegal" "Serbia" "Seychelles" "Sierra Leone" "Singapore" "Slovakia" "Slovenia" "Solomon Islands" "Somalia" "South Africa" "South Sudan" "Spain" "Sri Lanka" "Sudan" "Suriname" "Swaziland" "Sweden" "Switzerland" "Syria" "Taiwan" "Tajikistan" "Tanzania" "Thailand" "Togo" "Tonga" "Trinidad & Tobago" "Tunisia" "Turkey" "Turkmenistan" "Tuvalu" "Uganda" "Ukraine" "United Arab Emirates" "United Kingdom" "United States of America" "Uruguay" "Uzbekistan" "Vanuatu" "Vatican City (Holy See)" "Venezuela" "Vietnam" "Yemen" "Zambia" "Zimbabwe"]</p>
+
+    <p class="span12 field">
+        [select menu-773 "Select country" "United States of America" "Afghanistan" "Albania"
+        "Algeria" "Andorra" "Angola" "Antigua & Barbuda"
+        "Argentina" "Armenia" "Australia" "Austria" "Azerbaijan" "Bahamas" "Bahrain" "Bangladesh"
+        "Barbados" "Belarus" "Belgium" "Belize" "Benin" "Bhutan" "Bolivia" "Bosnia & Herzegovina"
+        "Botswana" "Brazil" "Brunei" "Bulgaria" "Burkina Faso" "Burundi" "Cambodia" "Cameroon"
+        "Canada" "Cape Verde" "Central African Republic" "Chad" "Chile" "China" "Colombia" "Comoros"
+        "Congo" "Congo Democratic Republic" "Costa Rica" "Cote d'Ivoire" "Croatia" "Cuba" "Cyprus"
+        "Czech Republic" "Denmark" "Djibouti" "Dominica" "Dominican Republic" "Ecuador" "East Timor"
+        "Egypt" "El Salvador" "Equatorial Guinea" "Eritrea" "Estonia" "Ethiopia" "Fiji" "Finland"
+        "France" "Gabon" "Gambia" "Georgia" "Germany" "Ghana" "Greece" "Grenada" "Guatemala"
+        "Guinea" "Guinea-Bissau" "Guyana" "Haiti" "Honduras" "Hungary" "Iceland" "India" "Indonesia"
+        "Iran" "Iraq" "Ireland" "Israel" "Italy" "Jamaica" "Japan" "Jordan" "Kazakhstan" "Kenya"
+        "Kiribati" "Korea North" "Korea South" "Kosovo" "Kuwait" "Kyrgyzstan" "Laos" "Latvia"
+        "Lebanon" "Lesotho" "Liberia" "Libya" "Liechtenstein" "Lithuania" "Luxembourg" "Macedonia"
+        "Madagascar" "Malawi" "Malaysia" "Maldives" "Mali" "Malta" "Marshall Islands" "Mauritania"
+        "Mauritius" "Mexico" "Micronesia" "Moldova" "Monaco" "Mongolia" "Montenegro" "Morocco"
+        "Mozambique" "Myanmar (Burma)" "Namibia" "Nauru" "Nepal" "The Netherlands" "New Zealand"
+        "Nicaragua" "Niger" "Nigeria" "Norway" "Oman" "Pakistan" "Palau" "Palestinian State*"
+        "Panama" "Papua New Guinea" "Paraguay" "Peru" "The Philippines" "Poland" "Portugal" "Qatar"
+        "Romania" "Russia" "Rwanda" "St. Kitts & Nevis" "St. Lucia" "St. Vincent & The Grenadines"
+        "Samoa" "San Marino" "Sao Tome & Principe" "Saudi Arabia" "Senegal" "Serbia" "Seychelles"
+        "Sierra Leone" "Singapore" "Slovakia" "Slovenia" "Solomon Islands" "Somalia" "South Africa"
+        "South Sudan" "Spain" "Sri Lanka" "Sudan" "Suriname" "Swaziland" "Sweden" "Switzerland"
+        "Syria" "Taiwan" "Tajikistan" "Tanzania" "Thailand" "Togo" "Tonga" "Trinidad & Tobago"
+        "Tunisia" "Turkey" "Turkmenistan" "Tuvalu" "Uganda" "Ukraine" "United Arab Emirates" "United
+        Kingdom" "Uruguay" "Uzbekistan" "Vanuatu" "Vatican City (Holy
+        See)" "Venezuela" "Vietnam" "Yemen" "Zambia" "Zimbabwe"]
+    </p>
+
     <p class="span4 field">[text* your-postal-code watermark "Postal Code:"] </p>
+
     <p class="field">[textarea your-message watermark "Message:"] </p>
-    <p class="submit-wrap"><input type="reset" value="clear" class="btn btn-primary" />[submit class:btn class:btn-primary "send"]</p>
+
+    <p class="submit-wrap"><input type="reset" value="clear" class="btn btn-primary"/>[submit
+        class:btn class:btn-primary "send"]</p>
