--- a/Products/Support/contact.html
+++ b/Products/Support/contact.html
@@ -4,16 +4,18 @@
     <p class="span4 field">[text* your-family-name watermark "Family Name:"] </p>
 
     <p class="span4 field">[email* your-email watermark "E-mail:"] </p>
-
+</div>
+<div class="row-fluid">
     <p class="span4 field">[text* your-company-name watermark "Company Name:"] </p>
 
     <p class="span4 field">[text* your-city watermark "City:"] </p>
 
     <p class="span4 field">[text* your-address watermark "Address:"] </p>
-
+</div>
+<div class="row-fluid">
     <p class="span4 field">[text your-phone watermark "Phone:"] </p>
 
-    <p class="span12 field">
+    <p class="span4 field">
         [select menu-773 "Select country" "United States of America" "Afghanistan" "Albania"
         "Algeria" "Andorra" "Angola" "Antigua & Barbuda"
         "Argentina" "Armenia" "Australia" "Austria" "Azerbaijan" "Bahamas" "Bahrain" "Bangladesh"
@@ -44,8 +46,8 @@
     </p>
 
     <p class="span4 field">[text* your-postal-code watermark "Postal Code:"] </p>
+</div>
+<p class="field">[textarea your-message watermark "Message:"] </p>
 
-    <p class="field">[textarea your-message watermark "Message:"] </p>
-
-    <p class="submit-wrap"><input type="reset" value="clear" class="btn btn-primary"/>[submit
-        class:btn class:btn-primary "send"]</p>
+<p class="submit-wrap"><input type="reset" value="clear" class="btn btn-primary"/>[submit
+    class:btn class:btn-primary "send"]</p>
