--- a/Products/Support/contact.html
+++ b/Products/Support/contact.html
@@ -1,16 +1,16 @@
 <div class="row-fluid">
     <p class="span4 field">[text* your-first-name watermark "First Name:"] </p>
 
-    <p class="span4 field">[text* your-family-name watermark "Family Name:"] </p>
+    <p class="span4 field">[text your-family-name watermark "Family Name:"] </p>
 
     <p class="span4 field">[email* your-email watermark "E-mail:"] </p>
 </div>
 <div class="row-fluid">
-    <p class="span4 field">[text* your-company-name watermark "Company Name:"] </p>
+    <p class="span4 field">[text your-company-name watermark "Company Name:"] </p>
 
-    <p class="span4 field">[text* your-city watermark "City:"] </p>
+    <p class="span4 field">[text your-city watermark "City:"] </p>
 
-    <p class="span4 field">[text* your-address watermark "Address:"] </p>
+    <p class="span4 field">[text your-address watermark "Address:"] </p>
 </div>
 <div class="row-fluid">
     <p class="span4 field">[text your-phone watermark "Phone:"] </p>
@@ -33,7 +33,7 @@
         "Madagascar" "Malawi" "Malaysia" "Maldives" "Mali" "Malta" "Marshall Islands" "Mauritania"
         "Mauritius" "Mexico" "Micronesia" "Moldova" "Monaco" "Mongolia" "Montenegro" "Morocco"
         "Mozambique" "Myanmar (Burma)" "Namibia" "Nauru" "Nepal" "The Netherlands" "New Zealand"
-        "Nicaragua" "Niger" "Nigeria" "Norway" "Oman" "Pakistan" "Palau" "Palestinian State*"
+        "Nicaragua" "Niger" "Nigeria" "Norway" "Oman" "Pakistan" "Palau" "Palestinian State"
         "Panama" "Papua New Guinea" "Paraguay" "Peru" "The Philippines" "Poland" "Portugal" "Qatar"
         "Romania" "Russia" "Rwanda" "St. Kitts & Nevis" "St. Lucia" "St. Vincent & The Grenadines"
         "Samoa" "San Marino" "Sao Tome & Principe" "Saudi Arabia" "Senegal" "Serbia" "Seychelles"
@@ -45,7 +45,7 @@
         See)" "Venezuela" "Vietnam" "Yemen" "Zambia" "Zimbabwe"]
     </p>
 
-    <p class="span4 field">[text* your-postal-code watermark "Postal Code:"] </p>
+    <p class="span4 field">[text your-postal-code watermark "Postal Code:"] </p>
 </div>
 <p class="field">[textarea your-message watermark "Message:"] </p>
 
