--- a/Products/Support/contact.html
+++ b/Products/Support/contact.html
@@ -47,7 +47,7 @@
 
     <p class="span4 field">[text your-postal-code watermark "Postal Code:"] </p>
 </div>
-<p class="field">[textarea your-message watermark "Message:"] </p>
+<p class="field">[textarea* your-message watermark "Message:"] </p>
 
 <p class="submit-wrap"><input type="reset" value="clear" class="btn btn-primary"/>[submit
     class:btn class:btn-primary "send"]</p>
