--- a/Products/Support/Support-page.html
+++ b/Products/Support/Support-page.html
@@ -1,10 +1,26 @@
-[row]
-
-[span12]
-<h3>Support</h3>
-[hr]
-[/span12]
-
-[/row]
-
-<h2><a title="Wipe Expert 3" href="http://www.bodrag.com/prod/wipe_expert/">Wipe Expert 3</a></h2>
+For the moment we offer support only in ENGLISH!
+<h2 class="su-post-title" >
+    <a style="color: #f50d29; text-decoration:none"
+       onMouseOver="this.style.textDecoration='underline'"
+       onMouseOut="this.style.textDecoration='none'" href="http://localhost/wordpress/support/faqs/">F.A.Q.</a>
+</h2>
+<p>
+Here you will find answers to other users' questions related to general problems like orders or downloads. Check here before contacting us!
+</p>
+<br>
+<h2 class="su-post-title">
+    <a style="color: #f50d29; text-decoration:none"
+       onMouseOver="this.style.textDecoration='underline'"
+       onMouseOut="this.style.textDecoration='none'" href="http://localhost/wordpress/support/tutorials/">Tutorials</a>
+</h2>
+<p>
+Here you will find some useful tutorials for our software products.
+</p>
+<br>
+<h2 class="su-post-title">
+    <a style="color: #f50d29; text-decoration:none"
+       onMouseOver="this.style.textDecoration='underline'"
+       onMouseOut="this.style.textDecoration='none'" href="http://localhost/wordpress/support/beta-testing/">Beta testing</a></h2>
+<p>
+Join our beta testing program and help us improve our products. At the end of the testing process you will receive a free license key for the software you tested.
+</p>
