--- a/Products/pages-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/Wipe Expert 3.html
@@ -14,10 +14,13 @@
 [extra_wrap]
 <h3>Wipe Expert 3</h3>
 <strong>WIPE EXPERT</strong> is an award winning privacy software &amp; internet eraser tool that helps remove all traces of online and offline activity. Also with the help of our product you can free space from your hard drive by removing the unnecessary files.
-<div style="margin-top: 20px">
-    [button text="BUY" link="http://localhost/wordpress/product/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
-    [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]
-</div>
+[sm_hr]
+<strong>Version:</strong>          3.0
+<strong>Release date:</strong>  December 25, 2010
+<strong>Trial period:</strong>   15 days
+[sm_hr]
+<div style="margin-top: 20px;">[button text="BUY" link="http://localhost/wordpress/product/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
+    [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]</div>
 [/extra_wrap]
 [/custom_element]
 
