--- a/Products/pages-downloads/files-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/files-downloads/Wipe Expert 3.html
@@ -2,10 +2,18 @@
 [row]
 
 [span12]
-<h2>Free Trials</h2>
+<h2>Downloads</h2>
 [hr]
 [/span12]
 
 [/row]
+
+
+<strong>Version:</strong>  3.0
+<strong>Release date:</strong> December 25, 2010
+<strong>period:</strong>  15 days
+<strong>Platform:</strong>  Windows XP, VISTA, 7, 8
+<strong>Languages:</strong>  English
+
 
 
