--- a/Products/pages-downloads/files-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/files-downloads/Wipe Expert 3.html
@@ -5,15 +5,29 @@
 <h2>Downloads</h2>
 [hr]
 [/span12]
-
 [/row]
 
-
-<strong>Version:</strong>  3.0
+[row]
+[span12]
+[extra_wrap]
+<h3>General Information</h3>
+<strong>Version:</strong>      3.0
 <strong>Release date:</strong> December 25, 2010
-<strong>period:</strong>  15 days
+<strong>period:</strong>       15 days
 <strong>Platform:</strong>  Windows XP, VISTA, 7, 8
 <strong>Languages:</strong>  English
+[/extra_wrap]
+[/span12]
+[/row]
+
+[hr]
+<b>FREE Trials</b>
+
+<div class="file" style="padding-top: 12px">
+    <img style="float: left" title="wesetup.exe" alt="wesetup.exe" src="http://www.bodrag.com/assets/images/ext_exe.jpg">
+    <a title="wesetup.exe" class="ext_exe" href="/download_file.php?file=wesetup.exe">wesetup.exe</a><span class="ext_exe">&nbsp;(3,019 Kb)</span>
+</div>
+
 
 
 
