--- a/Products/pages-downloads/product-info/Bodrag PDF Converter.html
+++ b/Products/pages-downloads/product-info/Bodrag PDF Converter.html
@@ -15,6 +15,13 @@
 
 [extra_wrap]
 <strong>Bodrag PDF Converter</strong> software enables exporting text, images and other contents from PDF documents into Word documents, so you can reuse and change your PDF content.
+[sm_hr]
+<strong>Version:</strong>          3.0
+<strong>Release date:</strong>  December 25, 2010
+<strong>Trial period:</strong>   15 days
+[sm_hr]
+<div style="margin-top: 20px;">[button text="BUY" link="http://localhost/wordpress/product/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
+    [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]</div>
 [/extra_wrap]
 [/custom_element]
 
@@ -55,6 +62,8 @@ The original PDF layout and images are accurately converted into the DOC documen
     <li>Easily turn large PDF files into workable Word files</li>
     <li>Start mirroring PDF files into Word files while keeping accurate formatting</li>
 </ul>
+
+&nbsp;
 [row]
 
 [span12]
