--- a/Products/pages-downloads/files-downloads/Wipe Expert 3.html
+++ b/Products/pages-downloads/files-downloads/Wipe Expert 3.html
@@ -14,11 +14,11 @@
 [extra_wrap]
 <h3>Wipe Expert 3</h3>
 <b>General Information</b>
-<strong>Version:</strong>      3.0
-<strong>Release date:</strong> December 25, 2010
-<strong>period:</strong>       15 days
-<strong>Platform:</strong>  Windows XP, VISTA, 7, 8
-<strong>Languages:</strong>  English
+<strong>Version:</strong> <span>3.0</span>
+<strong>Release date:</strong> <span>December 25, 2010</span>
+<strong>Trial period:</strong><span>15 days</span>
+<strong>Platform:</strong>  <span>Windows XP, VISTA, 7, 8</span>
+<strong>Languages:</strong> <span>English</span>
 [/extra_wrap]
 [/span12]
 [/row]
