--- a/Products/pages-downloads/product-info/Wipe Expert 3.html
+++ b/Products/pages-downloads/product-info/Wipe Expert 3.html
@@ -15,9 +15,11 @@
 <h3>Wipe Expert 3</h3>
 <strong>WIPE EXPERT</strong> is an award winning privacy software &amp; internet eraser tool that helps remove all traces of online and offline activity. Also with the help of our product you can free space from your hard drive by removing the unnecessary files.
 [sm_hr]
-<strong>Version:</strong>          3.0
-<strong>Release date:</strong>  December 25, 2010
-<strong>Trial period:</strong>   15 days
+<strong>Version:</strong> <span>3.0</span>
+<strong>Release date:</strong> <span>December 25, 2010</span>
+<strong>Trial period:</strong><span>15 days</span>
+<strong>Platform:</strong>  <span>Windows XP, VISTA, 7, 8</span>
+<strong>Languages:</strong> <span>English</span>
 [sm_hr]
 <div style="margin-top: 20px;">[button text="BUY" link="http://localhost/wordpress/product/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
     [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]</div>
