--- a/Products/pages-downloads/product-info/Bodrag PDF Converter.html
+++ b/Products/pages-downloads/product-info/Bodrag PDF Converter.html
@@ -16,11 +16,11 @@
 [extra_wrap]
 <strong>Bodrag PDF Converter</strong> software enables exporting text, images and other contents from PDF documents into Word documents, so you can reuse and change your PDF content.
 [sm_hr]
-<strong>Version:</strong>          1.00
-<strong>Release date:</strong>     December 17, 2010
-<strong>Trial period:</strong>     15 days
-<strong>Platform:</strong>         Windows 98, Me, 2000, XP, Vista, Windows 7
-<strong>Languages:</strong>        English, French, Portuguese
+<strong>Version:</strong>          <span>1.00</span>
+<strong>Release date:</strong>     <span>December 17, 2010</span>
+<strong>Trial period:</strong>     <span>15 days</span>
+<strong>Platform:</strong>         <span>Windows 98, Me, 2000, XP, Vista, Windows 7</span>
+<strong>Languages:</strong>       <span>English, French, Portuguese</span>
 [sm_hr]
 <div style="margin-top: 20px;">[button text="BUY" link="http://localhost/wordpress/product/wipe-expert-3" style="default" size="normal" target="_self" display="inline" icon="no"]
     [button text="free download" link="#download" style="default" size="normal" target="_self" display="inline" icon="no"]</div>
