--- a/Products/pages-downloads/files-downloads/Bodrag PDF Converter.html
+++ b/Products/pages-downloads/files-downloads/Bodrag PDF Converter.html
@@ -12,7 +12,7 @@
 [row]
 [span12]
 [extra_wrap]
-<h3>Wipe Expert 3</h3>
+<h3>Bodrag PDF Converter</h3>
 <b>General Information</b>
 <strong>Version:</strong>          <span>1.00</span>
 <strong>Release date:</strong>     <span>December 17, 2010</span>
